Audit Logs Rebase (#7443)
* Create new Splunk Logger (forward event data with HEC in goroutine)

Add calls to emit log event for each event/action performable through the UI or CLI, in addition to calls only accessible through GraphQL.

Initialize fields needed for the Splunk logger implementation in NewLogger(), adding fields to the config directly from os.Getenv - where the Sentry logger implementation pulls these environment variables directly in it's own module

Update some new_*_controller functions to pass logger into struct

Audit log calls are implemented in either 'mutations.go' or '*_controller.go', and sometimes both. This is because there are multiple potential ways to call a given functionality. CLI and JSON HTTP go through the standard router, hitting the '*_controller.go' handlers, but the GraphQL API allows mutation, which directly interfaces to the Provider struct bound function calls through reflection. These Provider functions are all in 'mutation.go', so audit log calls were added to each. The controller functions sometimes delegate that calls to the Provider, but not always. In these cases, the audit log emit events are at the controller level.

* update CHANGELOG to include new SPLUNK environment variables

* go generate for updates to logger interface in test harness

* set environment string instead of develop bool in splunk logger constructor, log splunk logger errors back to outer logger, rename .Auditf to .Audit, reorg logger layers for splunk first, remove TODO

* Fix resolver_test harness with GetLogger return test logger in app setup

* Move audit types to package audit, capital camel case audit type constants, and create type for audit strings

* Update generated mock code

* rework splunk logger forwarder goroutine per functionc all, implement single thread buffer push channels, fix getLocalIP comment

* Handle serialize error for chains, move comment/documentation

* Rework splunk logger to general http log 

--- a/core/config/v2/docs/core.toml
+++ b/core/config/v2/docs/core.toml
@@ -105,6 +105,16 @@ SendTimeout = '10s' # Default
 # UseBatchSend toggles sending telemetry to the ingress server using the batch client.
 UseBatchSend = true # Default
 
+[AuditLogger]
+# Enabled determines if this logger should be configured at all
+Enabled = false # Default
+# ForwardToUrl is where you want to forward logs to
+ForwardToUrl = 'http://localhost:9898' # Example
+# JsonWrapperKey if set wraps the map of data under another single key to make parsing easier
+JsonWrapperKey = 'event' # Example
+# Headers is the set of headers you wish to pass along with each request
+Headers = 'Authorization||token\X-SomeOther-Header||value with spaces | and a bar+*' # Example
+
 [Log]
 # DatabaseQueries tells the Chainlink node to log database queries made using the default logger. SQL statements will be logged at `debug` level. Not all statements can be logged. The best way to get a true log of all SQL statements is to enable SQL statement logging on Postgres.
 DatabaseQueries = false # Default
