--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -107,7 +107,7 @@ jobs:
         run: ./tools/bin/${{ matrix.cmd }} "${{ matrix.shard.pkgs }}"
       - name: Store logs artifacts on failure
         if: failure()
-        uses: actions/upload-artifact@v3.1.0
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # v3.1.0
         with:
           name: ${{ matrix.cmd }}_${{ matrix.shard.idx }}_logs
           path: |
