--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -85,7 +85,7 @@ jobs:
           CGO_ENABLED: "1"
       - name: Publish pprof artifacts
         if: ${{ success() }}
-        uses: actions/upload-artifact@v3.1.0
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # v3.1.0
         with:
           name: pprof_results
           path: ./integration-tests/performance/logs
