--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -268,8 +268,8 @@ ContractTransmitterTransmitTimeout = '1m0s'
 DatabaseTimeout = '1s'
 ObservationGracePeriod = '1s'
 
-[EVM.Automation]
-TransmitGasLimit = 540
+[EVM.OCR2.Automation]
+GasLimit = 540
 
 [[EVM.Nodes]]
 Name = 'foo'
