--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -251,6 +251,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
@@ -330,6 +331,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
@@ -403,6 +405,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
