--- a/core/services/chainlink/testdata/config-empty-effective.toml
+++ b/core/services/chainlink/testdata/config-empty-effective.toml
@@ -46,7 +46,7 @@ UseBatchSend = true
 Enabled = false
 ForwardToUrl = ''
 JsonWrapperKey = ''
-Headers = ''
+Headers = []
 
 [Log]
 DatabaseQueries = false
