Revert "Test workflow when no changes are detected"
This reverts commit 738bee65af5a451ad22d3857d00b53a072a81a93.

--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -20,7 +20,8 @@ jobs:
         with:
           filters: |
             src:
-              - '.github/workflows/README.md'
+              - 'contracts/**/*'
+              - '.github/workflows/solidity.yml'
 
   split-tests:
     name: Split Solidity Tests
