--- a/contracts/package.json
+++ b/contracts/package.json
@@ -17,7 +17,7 @@
     "coverage": "hardhat coverage",
     "prepublishOnly": "pnpm compile && ./scripts/prepublish_generate_abi_folder",
     "publish-beta": "pnpm publish --tag beta",
-    "publish-prod": "pnpm tag add @chainlink/contracts@0.5.1 latest"
+    "publish-prod": "npm dist-tag add @chainlink/contracts@0.5.1 latest"
   },
   "files": [
     "src/",
