--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -257,7 +257,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
-[EVM.OCR2
+[EVM.OCR2]
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
@@ -337,7 +337,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
-[EVM.OCR2
+[EVM.OCR2]
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
