Add CheckInclusionXXX to config dump

--- a/core/services/chainlink/cfgtest/dump/full-custom.env
+++ b/core/services/chainlink/cfgtest/dump/full-custom.env
@@ -132,6 +132,8 @@ GAS_ESTIMATOR_MODE=FixedPrice
 BLOCK_HISTORY_ESTIMATOR_BATCH_SIZE=13
 BLOCK_HISTORY_ESTIMATOR_BLOCK_DELAY=6
 BLOCK_HISTORY_ESTIMATOR_BLOCK_HISTORY_SIZE=56
+BLOCK_HISTORY_ESTIMATOR_CHECK_INCLUSION_BLOCKS=14
+BLOCK_HISTORY_ESTIMATOR_CHECK_INCLUSION_PERCENTILE=61
 BLOCK_HISTORY_ESTIMATOR_EIP1559_FEE_CAP_BUFFER_BLOCKS=97
 BLOCK_HISTORY_ESTIMATOR_TRANSACTION_PERCENTILE=42
 
