revert subheader change

--- a/core/chains/evm/config/v2/defaults/fallback.toml
+++ b/core/chains/evm/config/v2/defaults/fallback.toml
@@ -63,5 +63,6 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[OCR2]
 [OCR2.Automation]
 GasLimit = 5300000
