--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -259,6 +259,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
@@ -340,6 +341,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
@@ -415,6 +417,7 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
 [EVM.OCR2.Automation]
 GasLimit = 5300000
 
