add OCR2 automation gas limit chain specific config (#7667)
* add ocr2 automation gas limit config

--- a/core/chains/evm/config/v2/defaults/fallback.toml
+++ b/core/chains/evm/config/v2/defaults/fallback.toml
@@ -62,3 +62,6 @@ ContractConfirmations = 4
 ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
+
+[OCR2.Automation]
+GasLimit = 5300000
