--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -259,6 +259,10 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
+[EVM.OCR2.Automation]
+GasLimit = 5300000
+
 [[EVM.Nodes]]
 Name = 'primary'
 WSURL = 'wss://web.socket/mainnet'
@@ -337,6 +341,10 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
+[EVM.OCR2.Automation]
+GasLimit = 5300000
+
 [[EVM.Nodes]]
 Name = 'primary'
 WSURL = 'wss://web.socket/test'
@@ -408,6 +416,10 @@ ContractConfirmations = 4
 ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
+
+[EVM.OCR2]
+[EVM.OCR2.Automation]
+GasLimit = 5300000
 
 [[EVM.Nodes]]
 Name = 'primary'
