--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -276,6 +276,10 @@ ContractTransmitterTransmitTimeout = '1m0s'
 DatabaseTimeout = '1s'
 ObservationGracePeriod = '1s'
 
+[EVM.OCR2]
+[EVM.OCR2.Automation]
+GasLimit = 540
+
 [[EVM.Nodes]]
 Name = 'foo'
 WSURL = 'wss://web.socket/test'
