--- a/.github/workflows/lint-gh-workflows.yml
+++ b/.github/workflows/lint-gh-workflows.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   lint_workflows:
     name: Validate Github Action Workflows
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         id: collect-gha-metrics
