--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -14,7 +14,7 @@ jobs:
       id-token: write
       contents: read
     name: Build Chainlink Image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         id: collect-gha-metrics
@@ -54,7 +54,7 @@ jobs:
   run_tests:
     environment: integration
     name: run core evm ${{ github.event.inputs.focus }} performance tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     needs: build-chainlink
     steps:
       - name: Collect Metrics
