--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   split-packages:
     name: Split Go Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     outputs:
       splits: ${{ steps.split.outputs.splits }}
     steps:
@@ -46,7 +46,7 @@ jobs:
         cmd: ["go_core_tests", "go_core_race_tests"]
         split: ${{ fromJson(needs.split-packages.outputs.splits) }}
     name: Core Tests (${{ matrix.cmd }}) ${{ matrix.split.id }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/chainlink_test?sslmode=disable
       LOG_LEVEL: debug
@@ -121,7 +121,7 @@ jobs:
   core-complete:
     needs: [core]
     name: Core Tests (${{ matrix.cmd }})
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     strategy:
       fail-fast: false
       matrix:
