--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   changes:
     name: Detect changes
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     outputs:
       changes: ${{ steps.changes.outputs.src }}
     steps:
@@ -25,7 +25,7 @@ jobs:
 
   split-tests:
     name: Split Solidity Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     outputs:
       splits: ${{ steps.split.outputs.splits }}
     steps:
@@ -52,7 +52,7 @@ jobs:
       fail-fast: false
       matrix:
         split: ${{ fromJson(needs.split-tests.outputs.splits) }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         if: ${{ needs.changes.outputs.changes == 'true' }}
@@ -96,7 +96,7 @@ jobs:
   solidity-coverage:
     needs: [changes, solidity-coverage-splits]
     name: Solidity Coverage ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Checkout the repo
         uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
@@ -127,7 +127,7 @@ jobs:
       fail-fast: false
       matrix:
         split: ${{ fromJson(needs.split-tests.outputs.splits) }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         if: ${{ needs.changes.outputs.changes == 'true' }}
@@ -158,14 +158,14 @@ jobs:
   solidity:
     needs: [changes, solidity-splits]
     name: Solidity
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - run: echo 'Solidity tests finished!'
 
   prepublish-test:
     needs: [changes]
     name: Prepublish Test ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         if: ${{ needs.changes.outputs.changes == 'true' }}
@@ -189,7 +189,7 @@ jobs:
   native-compile:
     needs: [changes]
     name: Native Compilation ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         if: ${{ needs.changes.outputs.changes == 'true' }}
@@ -226,7 +226,7 @@ jobs:
         working-directory: contracts
     needs: [changes]
     name: Lint ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         if: ${{ needs.changes.outputs.changes == 'true' }}
@@ -252,7 +252,7 @@ jobs:
         working-directory: contracts
     needs: [changes]
     name: Prettier Formatting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu20.04-64cores-256GB
     steps:
       - name: Collect Metrics
         if: ${{ needs.changes.outputs.changes == 'true' }}
