Uses selected networks

--- a/integration-tests/example.env
+++ b/integration-tests/example.env
@@ -15,8 +15,8 @@ export SLACK_USER="U000000000" # User ID of the person running the soak tests to
 
 ########## Network Settings ##########
 
-# Select a pre-defined network 
-export SELECTED_NETWORK="SIMULATED"
+# Select a pre-defined network(s)
+export SELECTED_NETWORKS="SIMULATED"
 
 # General private values that will be retrieved when running on non-simulated networks
 export EVM_URLS="wss://evm.url,wss://other.url" # Comma-sparated list of websocket URLs to use when running on live networks
