--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -80,6 +80,25 @@ jobs:
       CHAINLINK_ENV_USER: ${{ github.actor }}
       TEST_TRIGGERED_BY: core-CI-eth
       TEST_LOG_LEVEL: debug
+    strategy:
+      matrix:
+        product:
+          - name: cron
+            nodes: 1
+          - name: flux
+            nodes: 1
+          - name: forwarder_ocr
+            nodes: 1
+          - name: keeper
+            nodes: 20
+          - name: ocr
+            nodes: 1
+          - name: runlog
+            nodes: 1
+          - name: vrf
+            nodes: 1
+          - name: vrfv2
+            nodes: 1
     steps:
       - name: Collect Metrics
         id: collect-gha-metrics
@@ -98,14 +117,14 @@ jobs:
         if: needs.changes.outputs.src == 'true'
         uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@cd9e407a6e0aa8ef7f315067644c0333846ffd40 # v2.0.24
         with:
-          test_command_to_run: make test_smoke_simulated args="-nodes=30"
+          test_command_to_run: cd integration-tests/ && make test_smoke_product product="${{ matrix.product.name }}" focus="@simulated" args="-nodes=${{ matrix.product.nodes }}"
           test_download_vendor_packages_command: make gomod
           test_download_ginkgo_command: make test_install_ginkgo
           cl_repo: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}.dkr.ecr.${{ secrets.QA_AWS_REGION }}.amazonaws.com/chainlink
           cl_image_tag: latest.${{ github.sha }}
           artifacts_location: ./integration-tests/smoke/logs
           publish_check_name: EVM Smoke Test Results
-          triggered_by: ${{ env.TEST_TRIGGERED_BY }}
+          triggered_by: ${{ env.TEST_TRIGGERED_BY }}-${{ matrix.product.name }}
           go_mod_path: ./integration-tests/go.mod
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
@@ -129,7 +148,7 @@ jobs:
         if: always()
         uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/cleanup@cd9e407a6e0aa8ef7f315067644c0333846ffd40 # v2.0.24
         with:
-          triggered_by: ${{ env.TEST_TRIGGERED_BY }}
+          triggered_by: ${{ env.TEST_TRIGGERED_BY }}-${{ matrix.product.name }}
 
   ### Solana Section
   get_projectserum_version:
