update backup URL example; add CL_DATABASE_ALLOW_SIMPLE_PASSWORDS env var

--- a/core/config/v2/docs/secrets.toml
+++ b/core/config/v2/docs/secrets.toml
@@ -8,10 +8,10 @@ URL = "postgresql://user:pass@localhost:5432/dbname?sslmode=disable" # Example
 # to set this value to a read replica if you have one to avoid excessive load on the main database.
 #
 # Environment variable: `CL_DATABASE_BACKUP_URL`
-BackupURL = "postgresql://user:pass@localhost:5432/backupdbname?sslmode=disable" # Example
+BackupURL = "postgresql://user:pass@read-replica.example.com:5432/dbname?sslmode=disable" # Example
 # AllowSimplePasswords skips the password complexity check normally enforced on URL & BackupURL.
 #
-# TODO need an env var?
+# Environment variable: `CL_DATABASE_ALLOW_SIMPLE_PASSWORDS`
 AllowSimplePasswords = false # Default
 
 [Explorer]
