Make naming more consistent

--- a/integration-tests/example.env
+++ b/integration-tests/example.env
@@ -20,7 +20,7 @@ export SELECTED_NETWORKS="SIMULATED"
 
 # General private values that will be retrieved when running on non-simulated networks
 export EVM_URLS="wss://evm.url,wss://other.url" # Comma-sparated list of websocket URLs to use when running on live networks
-export EVM_PRIVATE_KEYS="private,funding,keys" # Comma-separated list of private keys to use when running on live networks
+export EVM_KEYS="private,funding,keys" # Comma-separated list of private keys to use when running on live networks
 
 # Specific private values retrieved when running on specified chains
 # Goerli
