--- a/.github/workflows/operator-ui-cd.yml
+++ b/.github/workflows/operator-ui-cd.yml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   update-version:
+    permissions:
+      id-token: write
     name: Update Version
     runs-on: ubuntu-latest
     steps:
@@ -31,7 +33,7 @@ jobs:
 
       - name: Get Github Token
         id: get-gh-token
-        uses: smartcontractkit/chainlink-github-actions/github-app-token-issuer
+        uses: smartcontractkit/chainlink-github-actions/github-token-issuer@main
         with:
           url: ${{ secrets.AWS_INFRA_RELENG_TOKEN_ISSUER_LAMBDA_URL }}
 
