--- a/.github/workflows/operator-ui-ci.yml
+++ b/.github/workflows/operator-ui-ci.yml
@@ -4,6 +4,9 @@ on:
 
 jobs:
   check-gql:
+    permissions:
+      id-token: write
+      contents: read
     name: Breaking Changes GQL Check
     runs-on: ubuntu-latest
     steps:
@@ -17,22 +20,23 @@ jobs:
         continue-on-error: true
 
       - name: Assume role capable of dispatching action
-        uses: aws-actions/configure-aws-credentials@ea7b857d8a33dc2fb4ef5a724500044281b49a5e # v1.6.0
+        uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # v1.7.0
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_OPERATOR_UI_DISPATCH_ACTION_TOKEN_ISSUER_ROLE_ARN }}
-          role-duration-seconds: ${{ secrets.aws-role-duration-seconds }}
+          role-duration-seconds: 3600
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Get Github Token
         id: get-gh-token
-        uses: smartcontractkit/chainlink-github-actions/github-app-token-issuer
+        uses: smartcontractkit/chainlink-github-actions/github-token-issuer@main
         with:
           url: ${{ secrets.AWS_INFRA_RELENG_TOKEN_ISSUER_LAMBDA_URL }}
 
-      - uses: convictional/trigger-workflow-and-wait@a382075b8ce6e15d85477232d501eb047e21f7aa #v1.6.3
+      - uses: convictional/trigger-workflow-and-wait@f69fa9eedd3c62a599220f4d5745230e237904be #v1.6.5
         with:
           owner: smartcontractkit
           repo: operator-ui
+          comment_downstream_url: ${{ github.event.pull_request.comments_url }}
           github_token: ${{ steps.get-gh-token.outputs.access-token }}
           workflow_file_name: chainlink-ci.yml
           client_payload: '{"ref": "${{ github.event.pull_request.head.sha }}"}'
