--- a/.github/workflows/operator-ui-ci.yml
+++ b/.github/workflows/operator-ui-ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_CHAINLINK_CROSS_CI_OPERATOR_UI_TOKEN_ISSUER_ROLE_ARN }}
           role-duration-seconds: 3600
+          role-session-name: operator-ui-ci.check-gql
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Get Github Token
